# brand-strategy-gpt

./: Brand Inputs Master.txt  app.py  pyproject.toml  requirements.txt  step1.json  step2.json  step3.json  step4.json
utils/: file_utils.py  openai_utils.py  prompts.py  promptsA.py  utils.py
